# contam

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  Dockerfile  README.md  contam_simulator.ipynb  contamination_estimation.py  mypy.ini  pyproject.toml  setup.py  test_contamination_estimation.py
.github/workflows/: ci.yml
data/: test.bed  test.vcf  test.vcf.gz.tbi
diploid_contam/: contamination_estimation.py  data.py
docs/: crates.js  search-index.js  settings.html  source-files.js
docs/adler/: struct.Adler32.html
docs/aho_corasick/: enum.ErrorKind.html  enum.MatchKind.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.Error.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Match.html  struct.StreamFindIter.html
docs/atty/: enum.Stream.html
docs/bit_vec/: struct.BitVec.html  struct.Blocks.html  struct.IntoIter.html  struct.Iter.html
docs/byteorder/: enum.BigEndian.html  enum.LittleEndian.html
docs/clap/: all.html  enum.AppSettings.html  enum.ArgAction.html  enum.ArgSettings.html  enum.ColorChoice.html  enum.ErrorKind.html  enum.ValueHint.html  enum.ValueSource.html  index.html  sidebar-items.js  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Indices.html  struct.OsValues.html  struct.PossibleValue.html  struct.Values.html  trait.ArgEnum.html  trait.Args.html  trait.FromArgMatches.html  trait.Parser.html  trait.Subcommand.html  trait.ValueEnum.html
docs/clap_lex/: enum.SeekFrom.html  index.html  struct.ArgCursor.html  struct.ParsedArg.html  struct.RawArgs.html  struct.RawOsStr.html  struct.RawOsString.html  struct.ShortFlags.html
docs/crc32fast/: struct.Hasher.html
docs/crossbeam_epoch/: struct.Atomic.html  struct.Owned.html
docs/crossbeam_utils/: struct.CachePadded.html
docs/diploid_contam_estimator/: all.html  constant.MAX_CONTAM.html  fn.run.html  fn.wrapper.html  fn.write_json.html  index.html  sidebar-items.js
docs/either/: enum.Either.html
docs/env_logger/: all.html  constant.DEFAULT_FILTER_ENV.html  (+13 more)
notebooks/: contam_simulator.ipynb
rust/: Cargo.toml  README.md
rust/src/: contamination_estimator.rs  main.rs  model.rs  vcfreader.rs  workflow.rs
src/: bed.rs  bedreader.rs  cli.rs  contamination_estimation.py  contamination_estimator.rs  data.py  lib.rs  main.rs  model.rs  models.py  vcfreader.rs  workflow.rs
tests/: __init__.py  test_contamination_estimation.py
(+4484 files in other folders)
