[package]
name = "diploid-contam-estimator"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Estimating contamination level in diploid DNA seuqencing libraries"
exclude=["diploid_contam", "tests", "img", "notebooks", "docs"]
repository = "https://github.com/wckdouglas/diploid-contam"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.13"
env_logger = "0.9.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
noodles-bed = "0.3.0"
noodles-bgzf = "0.13.0"
noodles-tabix = "0.11.0"
noodles-vcf = "0.17.0"
rayon = "1.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.12.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
rstest = "0.15.0"
