[tool.poetry]
name = "contam-estimate"
version = "0.1.0"
description = "estimating contamination from a diploid sequencing from VCF"
authors = ["Douglas Wu <wckdouglas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.7.3"
numpy = "^1.21.4"
pydantic = "^1.9.1"
pysam = "^0.19.1"
more-itertools = "^8.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.960"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
dev = ["pytest", "mypy", "pytest-cov"]



[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
    "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = [
    "pysam.*",
    "scipy.*"
]
ignore_missing_imports = true