[package]
name = "diploid-contam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.12.0"
rust-htslib = "0.39.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
args = "2.0"
