[package]
name = "diploid-contam-estimator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.12.0"
rust-htslib = "0.39.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = "3.2.13"

[dev-dependencies]
rstest = "0.15.0"
assert_approx_eq = "1.1.0"